[tool.poetry]
name = "pyuvision"
version = "0.1.0"
description = ""
authors = ["JNSFilipe <jose.filipe@ieee.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
